having only user APIF
