# api/gen/api.go
@@ -1,7 +1,7 @@
 /*
- * OpenAPI Go Reference Service
+ * Sample Service
  *
- * This is a sample Go Reference
+ * This is a sample service
  *
  * API version: v1
  * Generated by: OpenAPI Generator (https://openapi-generator.tech)
@@ -14,17 +14,6 @@ import (
 	"net/http"
 )
 
-// CompanyAPIRouter defines the required methods for binding the api requests to a responses for the CompanyAPI
-// The CompanyAPIRouter implementation should parse necessary information from the http request,
-// pass the data to a CompanyAPIServicer to perform the required actions, then write the service results to the http response.
-type CompanyAPIRouter interface {
-	AddCompany(http.ResponseWriter, *http.Request)
-	DeleteCompany(http.ResponseWriter, *http.Request)
-	GetCompanies(http.ResponseWriter, *http.Request)
-	GetCompany(http.ResponseWriter, *http.Request)
-	UpdateCompany(http.ResponseWriter, *http.Request)
-}
-
 // UserAPIRouter defines the required methods for binding the api requests to a responses for the UserAPI
 // The UserAPIRouter implementation should parse necessary information from the http request,
 // pass the data to a UserAPIServicer to perform the required actions, then write the service results to the http response.
@@ -34,18 +23,6 @@ type UserAPIRouter interface {
 	GetUser(http.ResponseWriter, *http.Request)
 	GetUsers(http.ResponseWriter, *http.Request)
 	UpdateUser(http.ResponseWriter, *http.Request)
-}
-
-// CompanyAPIServicer defines the api actions for the CompanyAPI service
-// This interface intended to stay up to date with the openapi yaml used to generate it,
-// while the service implementation can be ignored with the .openapi-generator-ignore file
-// and updated with the logic required for the API.
-type CompanyAPIServicer interface {
-	AddCompany(context.Context, string, Company) (ImplResponse, error)
-	DeleteCompany(context.Context, string, string) (ImplResponse, error)
-	GetCompanies(context.Context, string) (ImplResponse, error)
-	GetCompany(context.Context, string, string) (ImplResponse, error)
-	UpdateCompany(context.Context, string, string, Company) (ImplResponse, error)
 }
 
 // UserAPIServicer defines the api actions for the UserAPI service
