# api/gen/model_company.go
@@ -1,33 +1,0 @@
-/*
- * OpenAPI Go Reference Service
- *
- * This is a sample Go Reference
- *
- * API version: v1
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package openapi
-
-import (
-	"time"
-)
-
-// Company - A Company for Reference Service
-type Company struct {
-	Name string `json:"name,omitempty"`
-
-	Address string `json:"address,omitempty"`
-
-	CreatedOn time.Time `json:"created_on,omitempty"`
-}
-
-// AssertCompanyRequired checks if the required fields are not zero-ed
-func AssertCompanyRequired(obj Company) error {
-	return nil
-}
-
-// AssertCompanyConstraints checks if the values respects the defined constraints
-func AssertCompanyConstraints(obj Company) error {
-	return nil
-}
