# api/gen/model_company_view.go
@@ -1,35 +1,0 @@
-/*
- * OpenAPI Go Reference Service
- *
- * This is a sample Go Reference
- *
- * API version: v1
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package openapi
-
-import (
-	"time"
-)
-
-// CompanyView - A Company View for Reference Service
-type CompanyView struct {
-	Id string `json:"id,omitempty"`
-
-	Name string `json:"name,omitempty"`
-
-	Address string `json:"address,omitempty"`
-
-	CreatedOn time.Time `json:"created_on,omitempty"`
-}
-
-// AssertCompanyViewRequired checks if the required fields are not zero-ed
-func AssertCompanyViewRequired(obj CompanyView) error {
-	return nil
-}
-
-// AssertCompanyViewConstraints checks if the values respects the defined constraints
-func AssertCompanyViewConstraints(obj CompanyView) error {
-	return nil
-}
