# api/gen/model_user.go
@@ -1,7 +1,7 @@
 /*
- * OpenAPI Go Reference Service
+ * Sample Service
  *
- * This is a sample Go Reference
+ * This is a sample service
  *
  * API version: v1
  * Generated by: OpenAPI Generator (https://openapi-generator.tech)
@@ -16,8 +16,6 @@ type User struct {
 	LastName string `json:"last_name,omitempty"`
 
 	Email string `json:"email,omitempty"`
-
-	CompanyId string `json:"company_id,omitempty"`
 }
 
 // AssertUserRequired checks if the required fields are not zero-ed
