# api/gen/model_user_view.go
@@ -1,7 +1,7 @@
 /*
- * OpenAPI Go Reference Service
+ * Sample Service
  *
- * This is a sample Go Reference
+ * This is a sample service
  *
  * API version: v1
  * Generated by: OpenAPI Generator (https://openapi-generator.tech)
@@ -18,8 +18,6 @@ type UserView struct {
 	LastName string `json:"last_name,omitempty"`
 
 	Email string `json:"email,omitempty"`
-
-	CompanyId string `json:"company_id,omitempty"`
 }
 
 // AssertUserViewRequired checks if the required fields are not zero-ed
